clusters/homelab/apps/ai-agent/coding-agent/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-ui
  namespace: coding-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agent-ui
  template:
    metadata:
      annotations:
        rollout-timestamp: "2026-05-11T12:30:00Z"
      labels:
        app: agent-ui
    spec:
      containers:
        - name: agent-ui
          image: harbor.michaelhomelab.work/homelab/ai-agent/coding-agent/kodewriter-frontend:0.1.2
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: agent-ui
  namespace: coding-agent
spec:
  selector:
    app: agent-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
